adding some info

--- a/notebooks/1.Classes.ipynb
+++ b/notebooks/1.Classes.ipynb
@@ -6,17 +6,50 @@
    "metadata": {},
    "source": [
     "# Introduction to classes\n",
-    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fcb304f",
+   "metadata": {},
+   "source": [
     "Classes are \"just\" a way to organise your code.\n",
     "\n",
     "You've probably been exposed to classes already.\n",
     "\n",
-    "For example, a `ndarray` from `numpy` is a class.\n",
-    "\n",
-    "## A little bit of semantics (from the [Python official page](https://docs.python.org/3/tutorial/classes.html)):\n",
-    "Creating a new class creates a new _type_ of object, allowing new _instances_ of that type to be made. Each class instance can have attributes attached to it for maintaining its state. Class instances can also have methods (defined by its class) for modifying its state.\n",
-    "\n",
-    "## What is the use of classes?\n",
+    "For example, a `ndarray` from `numpy` is a class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bc82de3",
+   "metadata": {},
+   "source": [
+    "## A little bit of semantics (from the [Python official page](https://docs.python.org/3/tutorial/classes.html))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d6a8997",
+   "metadata": {},
+   "source": [
+    "Creating a new class creates a new _type_ of object, allowing new _instances_ of that type to be made. Each class instance can have attributes attached to it for maintaining its state. Class instances can also have methods (defined by its class) for modifying its state."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bca0c574",
+   "metadata": {},
+   "source": [
+    "## What is the use of classes?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2adf3dce",
+   "metadata": {},
+   "source": [
     "As mentioned before, classes are:\n",
     "1. a different (better?) way to organise your code.\n",
     "2. a way of storing attributes/parameters more efficiently\n",
@@ -162,8 +195,14 @@
    "id": "de457767",
    "metadata": {},
    "source": [
-    "## How to create a class\n",
-    "\n",
+    "## How to create a class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7209d295",
+   "metadata": {},
+   "source": [
     "The syntax to create a class is the following:"
    ]
   },
@@ -393,7 +432,7 @@
    "id": "95ffe0cd",
    "metadata": {},
    "source": [
-    "[Next notebook](2.Class_initialisation.ipynb)"
+    "[To the next notebook](2.Class_initialisation.ipynb)"
    ]
   }
  ],
