--- a/notebooks/2.Class_initialisation.ipynb
+++ b/notebooks/2.Class_initialisation.ipynb
@@ -4,8 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initialising a class\n",
-    "\n",
+    "# A bit more about classes\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialising a class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Classes can be initialised with the function `__init__` the following way"
    ]
   },
@@ -77,7 +90,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rewritting the \"basic\" functions\n",
+    "## Rewritting the \"basic\" functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "It is possible to rewrite the basic functions such as the `__str__` function that is called by the `print` function:"
    ]
   },
@@ -130,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Next notebook](3.GameOfLife.ipynb)"
+    "[To the next notebook](3.GameOfLife.ipynb)"
    ]
   }
  ],
