--- a/notebooks/4.Preparing_Turing.ipynb
+++ b/notebooks/4.Preparing_Turing.ipynb
@@ -30,16 +30,16 @@
     "These interactions can be modelled multiple ways.\n",
     "We decided here to use the [FitzHugh–Nagumo model](https://en.wikipedia.org/wiki/FitzHugh%E2%80%93Nagumo_model) (for no particular reason but that it is slightly more complex than the original Turing model) resulting in the following equations:\n",
     "\n",
-    "$\\frac{\\delta a}{\\delta t} = \\mu_a\\Delta a + a - a^3 - i + k$ [1]\n",
+    "$\\frac{\\delta a}{\\delta t} = \\mu_a\\nabla a + a - a^3 - i + k$ [1]\n",
     "\n",
-    "$\\tau \\frac{\\delta i}{\\delta t} = \\mu_i\\Delta i + a - i$ [2]\n",
+    "$\\tau \\frac{\\delta i}{\\delta t} = \\mu_i\\nabla i + a - i$ [2]\n",
     "\n",
     "These are partial differential equations that represent the change of concentration of $A$ ($\\delta a$) or $I$ ($\\delta i$) in time ($\\delta t$).\n",
     "\n",
-    "In equation [1], $\\Delta a$ is the potential diffusion $A$ and $\\mu_a$ is the diffusion coefficient.\n",
+    "In equation [1], $\\nabla a$ is the potential diffusion $A$ and $\\mu_a$ is the diffusion coefficient.\n",
     "$+ a$ is the auto-activation of $A$, $-a^3$ is the degradation, $-i$ is the inhibition from $I$ and $k$ is a constant to determine whether $A$ acts as a source ($0<k$), a sink ($k<0$) or is neutral ($k=0$).\n",
     "\n",
-    "In equation [2], $\\Delta i$ is the potential diffusion of $I$ and $\\mu_i$ is the diffusion coefficient.\n",
+    "In equation [2], $\\nabla i$ is the potential diffusion of $I$ and $\\mu_i$ is the diffusion coefficient.\n",
     "$+a$ is the activation from $A$, $-i$ is the degradation and $\\tau$ allows to modulate the amplitude of change of concentration of $I$ compared to the one of the activator $A$.\n",
     "\n",
     "It is important to know that to model the previous network it is necessary to decide on some values, the parameters of the model:\n",
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# So we aim at writting a class that produces the following output\n",
+    "## So we aim at writting a class that produces the following output\n",
     "<img src=\"../Images/My-first-Turing-Pattern.gif\" alt=\"First Turing Pattern\" width=\"200\"/>"
    ]
   },
@@ -69,11 +69,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preparing Turing\n",
+    "## Preparing Turing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For our class to work properly, it is necessary that it contains all the parameters of the model we are using.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "For our class to work properly, it is necessary that it contains all the parameters of the model we are using.\n",
-    "\n",
-    "## Exercice\n",
     "Write a class that:\n",
     "1) contains all the parameters necessary to run our model\n",
     "2) when called naked initialised the parameters to their default values\n",
@@ -151,14 +168,6 @@
     "print(model_1)\n",
     "model_2 = Turing(mu_a=10, tau=1, T=10, size=200)\n",
     "print(model_2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Turing without space and only one ligand\n",
-    "\n"
    ]
   }
  ],
