--- a/notebooks/3.GameOfLife.ipynb
+++ b/notebooks/3.GameOfLife.ipynb
@@ -409,10 +409,10 @@
     "            \n",
     "            new_live = np.zeros_like(nb_neighbs, dtype=bool)\n",
     "            # Checking the rules:\n",
-    "            #   Any live cell with two or three live neighbours survives.\n",
+    "            #   Any live cell with `th` live neighbours survives.\n",
     "            for th in self.th_live:\n",
     "                new_live |= (nb_neighbs == th) & self.current_state\n",
-    "            #   Any dead cell with three live neighbours becomes a live cell.\n",
+    "            #   Any dead cell with `th` live neighbours becomes a live cell.\n",
     "            for th in self.th_dead:\n",
     "                new_live |= ((nb_neighbs == th) & (~self.current_state))\n",
     "            #   All other live cells die in the next generation. Similarly, all other dead cells stay dead.\n",
@@ -434,10 +434,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "size = 300\n",
+    "size = 10\n",
     "init_state_large = np.zeros((size, size), dtype=bool)\n",
     "init_state_large[size//3-2:size//3+2, size//3-3:size//3+3] = init_state\n",
-    "game_of_life2 = GameOfLifeGeneral(init_state_large, th_live=[1, 2, 3, 4, 5], th_dead=[3], boundary=\"wrap\")"
+    "game_of_life2 = GameOfLifeGeneral(init_state_large, th_live=[1, 2, 3, 4, 5], th_dead=[3], boundary=\"wrap\")\n",
+    "game_of_life2.plot()"
    ]
   },
   {
@@ -446,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_of_life2.iterations(10)\n",
+    "game_of_life2.iterations(1)\n",
     "game_of_life2.plot()"
    ]
   },
