New version of the gif

--- a/notebooks/6.Modeling_diffusion.ipynb
+++ b/notebooks/6.Modeling_diffusion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Turing with only space\n",
+    "# The diffusion\n",
     "---"
    ]
   },
@@ -82,11 +82,42 @@
    "metadata": {},
    "source": [
     "Therefore, instead of having one single cell in our model, we will have a row of cells that are communicating with each others.\n",
-    "The communication can be described by $\\frac{\\delta a}{\\delta t} = \\mu_a \\nabla a$ for the acitvator and $\\tau\\frac{\\delta i}{\\delta t} = \\mu_i \\nabla i$ for the inhibitor.\n",
     "\n",
-    "Now, the question is: how do we model $\\nabla$??\n",
+    "The communication can be described by:\n",
+    "$$\\frac{\\delta a}{\\delta t} = \\mu_a \\nabla a$$\n",
+    "for the acitvator and\n",
+    "$$\\tau\\frac{\\delta i}{\\delta t} = \\mu_i \\nabla i$$\n",
+    "for the inhibitor.\n",
+    "\n",
+    "Now, the question is: how do we model $\\nabla\\bullet$??\n",
+    "\n",
+    "Well, the idea is that a given cell, at a position $x$ recieve, via diffusion, content from its neighbouring cells at positions $x-\\delta x$ and $x + \\delta x$.\n",
+    "\n",
+    "That same cell gives content, also via diffusion, to the same neighbours at positions $x-\\delta x$ and $x + \\delta x$.\n",
+    "\n",
+    "How much a cell recieves from its neighbours is modulated by the parameters $\\mu_a$ for the activator and $\\mu_i$ for the inhibitor. $\\mu_a=0$ means that there is no diffusion for the activator, $\\mu_a=1$ means that the cells give all their content to their neighbours and a $\\mu_a=0.25$ means that the cells give $25\\%$ of their content to their neighbourhing cells.\n",
+    "\n",
+    "⚠️One has to be careful though, since $\\mu_a$ models how much a cell give to **1** of its neighbors, if $\\mu_a*\\#neighbs>1$ then the cell will diffuse more than it has, which is physically not possible.⚠️\n",
+    "\n",
+    "That being said, we can now model diffusion as follow:\n",
+    "$$\n",
+    "\\frac{\\delta a_{x, t}}{\\delta t} = \\mu_a . (a_{x-\\delta x, t} + a_{x+\\delta x, t} - 2a_{x, t})\n",
+    "$$\n",
+    "(similarly for $i$).\n",
+    "\n",
+    "And therefore the concentration at $t+\\delta t$ after diffusion is the following:\n",
+    "$$\n",
+    "a_{x, t+\\delta t} = a_{x, t} + \\delta t . \\mu_a . (a_{x-\\delta x, t} + a_{x+\\delta x, t} - 2a_{x, t})\n",
+    "$$\n",
     "\n",
     "<img src=\"../Images/Diffusion.png\" alt=\"Diffusion\" width=\"500\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "W"
    ]
   }
  ],
