--- a/notebooks/3.GameOfLife.ipynb
+++ b/notebooks/3.GameOfLife.ipynb
@@ -395,6 +395,7 @@
    "outputs": [],
    "source": [
     "class GameOfLifeGeneral(GameOfLife):\n",
+    "    __current_iter = 0\n",
     "    def iterations(self, nb_iter=1):\n",
     "        \"\"\"\n",
     "        Run one iteration of the automaton and update the current state with its new value\n",
@@ -405,21 +406,23 @@
     "        for _ in range(nb_iter):\n",
     "            # Counting the number of neighbors\n",
     "            # Changing the boundary parameter will \n",
-    "            nb_neighbs = convolve2d(self.current_state, self.kernel, boundary=self.boundary, mode='same')\n",
+    "            nb_neighbs = convolve2d(self.current_state!=0, self.kernel, boundary=self.boundary, mode='same')\n",
     "            \n",
     "            new_live = np.zeros_like(nb_neighbs, dtype=bool)\n",
     "            # Checking the rules:\n",
     "            #   Any live cell with `th` live neighbours survives.\n",
     "            for th in self.th_live:\n",
-    "                new_live |= (nb_neighbs == th) & self.current_state\n",
+    "                new_live |= (nb_neighbs == th) & (self.current_state!=0)\n",
     "            #   Any dead cell with `th` live neighbours becomes a live cell.\n",
     "            for th in self.th_dead:\n",
-    "                new_live |= ((nb_neighbs == th) & (~self.current_state))\n",
+    "                new_live |= (nb_neighbs == th) & (self.current_state==0)\n",
     "            #   All other live cells die in the next generation. Similarly, all other dead cells stay dead.\n",
-    "            self.current_state = new_live\n",
+    "            self.__current_iter += 1\n",
+    "            self.current_state[new_live & (self.current_state==0)] = self.__current_iter\n",
+    "            self.current_state[~new_live] = 0\n",
     "\n",
     "    def __init__(self, initial_state, boundary=None, th_live=[2, 3], th_dead=[3]):\n",
-    "        super().__init__(initial_state, boundary=boundary)\n",
+    "        super().__init__(initial_state.astype(int), boundary=boundary)\n",
     "        if not hasattr(th_live, \"__iter__\"):\n",
     "            th_live = [th_live]\n",
     "        if not hasattr(th_dead, \"__iter__\"):\n",
@@ -452,16 +455,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Maze generation\n",
+    "The code below allows to generate the following gif:\n",
+    "\n",
+    "<img src=\"../Images/GoLMaze.gif\" alt=\"Diffusion\" width=\"500\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "size = 300\n",
+    "init_state_large = np.zeros((size, size), dtype=bool)\n",
+    "init_state_large[size//3-2:size//3+2, size//3-3:size//3+3] = init_state\n",
+    "\n",
     "total_iter = 700\n",
     "nb_tp = 100\n",
     "incr = total_iter//nb_tp\n",
     "game_of_life2 = GameOfLifeGeneral(init_state_large, th_live=[1, 2, 3, 4, 5], th_dead=[3], boundary=\"wrap\")\n",
-    "output = np.zeros(init_state_large.shape + (nb_tp,), dtype=\"uint8\")\n",
+    "output = np.zeros(init_state_large.shape + (nb_tp,), dtype=\"uint16\")\n",
     "for i in range(nb_tp):\n",
     "    output[..., i] = game_of_life2.current_state\n",
     "    game_of_life2.iterations(incr)\n"
@@ -473,10 +490,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Need to have installed tifffile for that part:\n",
-    "## `pip install tifffile`\n",
-    "from tifffile import imwrite\n",
-    "imwrite(\"GoLMaze.tif\", output.T)"
+    "## Need to have installed imageio for that part:\n",
+    "## `pip install imageio`\n",
+    "from imageio import mimsave\n",
+    "mimsave(\"GoLMaze.gif\", (output.T//3).astype(\"uint8\"), duration=.05)"
    ]
   }
  ],
