--- a/notebooks/3.GameOfLife.ipynb
+++ b/notebooks/3.GameOfLife.ipynb
@@ -418,17 +418,21 @@
     "                new_live |= (nb_neighbs == th) & (self.current_state==0)\n",
     "            #   All other live cells die in the next generation. Similarly, all other dead cells stay dead.\n",
     "            self.__current_iter += 1\n",
-    "            self.current_state[new_live & (self.current_state==0)] = self.__current_iter\n",
-    "            self.current_state[~new_live] = 0\n",
+    "            if self.keep_track:\n",
+    "                self.current_state[new_live & (self.current_state==0)] = self.__current_iter\n",
+    "                self.current_state[~new_live] = 0\n",
+    "            else:\n",
+    "                self.current_state = new_live\n",
     "\n",
-    "    def __init__(self, initial_state, boundary=None, th_live=[2, 3], th_dead=[3]):\n",
+    "    def __init__(self, initial_state, boundary=None, th_live=[2, 3], th_dead=[3], keep_track=False):\n",
     "        super().__init__(initial_state.astype(int), boundary=boundary)\n",
     "        if not hasattr(th_live, \"__iter__\"):\n",
     "            th_live = [th_live]\n",
     "        if not hasattr(th_dead, \"__iter__\"):\n",
     "            th_live = [th_dead]\n",
     "        self.th_live = th_live\n",
-    "        self.th_dead = th_dead"
+    "        self.th_dead = th_dead\n",
+    "        self.keep_track = keep_track"
    ]
   },
   {
@@ -477,7 +481,7 @@
     "total_iter = 700\n",
     "nb_tp = 100\n",
     "incr = total_iter//nb_tp\n",
-    "game_of_life2 = GameOfLifeGeneral(init_state_large, th_live=[1, 2, 3, 4, 5], th_dead=[3], boundary=\"wrap\")\n",
+    "game_of_life2 = GameOfLifeGeneral(init_state_large, th_live=[1, 2, 3, 4, 5], th_dead=[3], boundary=\"wrap\", keep_track=True)\n",
     "output = np.zeros(init_state_large.shape + (nb_tp,), dtype=\"uint16\")\n",
     "for i in range(nb_tp):\n",
     "    output[..., i] = game_of_life2.current_state\n",
@@ -493,7 +497,30 @@
     "## Need to have installed imageio for that part:\n",
     "## `pip install imageio`\n",
     "from imageio import mimsave\n",
-    "mimsave(\"GoLMaze.gif\", (output.T//3).astype(\"uint8\"), duration=.05)"
+    "mimsave(\"tmp.gif\", (output.T//3).astype(\"uint8\"), duration=.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Colorful\n",
+    "\n",
+    "For this kind of output:\n",
+    "\n",
+    "<img src=\"../Images/GoLMaze_colour.gif\" alt=\"Diffusion\" width=\"500\"/>\n",
+    "\n",
+    "You can save your image as a 3D tif and choose your favourite colormap in FIJI for example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tifffile import imwrite\n",
+    "imwrite('Maze_color.tif', output.T//3)"
    ]
   }
  ],
