--- a/notebooks/3.GameOfLife.ipynb
+++ b/notebooks/3.GameOfLife.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5608,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,11 +341,13 @@
     "        fig.tight_layout()\n",
     "        plt.show()\n",
     "\n",
-    "    def __init__(self, initial_state, boundary=None):\n",
+    "    def __init__(self, initial_state, boundary=None, kernel=None):\n",
     "        self.initial_state = initial_state\n",
     "        self.current_state = initial_state\n",
     "        if boundary:\n",
-    "            self.boundary = boundary"
+    "            self.boundary = boundary\n",
+    "        if kernel is not None:\n",
+    "            self.kernel = kernel"
    ]
   },
   {
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5609,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,8 +426,8 @@
     "            else:\n",
     "                self.current_state = new_live\n",
     "\n",
-    "    def __init__(self, initial_state, boundary=None, th_live=[2, 3], th_dead=[3], keep_track=False):\n",
-    "        super().__init__(initial_state.astype(int), boundary=boundary)\n",
+    "    def __init__(self, initial_state, boundary=None, th_live=[2, 3], th_dead=[3], keep_track=False, kernel=None):\n",
+    "        super().__init__(initial_state.astype(int), boundary=boundary, kernel=kernel)\n",
     "        if not hasattr(th_live, \"__iter__\"):\n",
     "            th_live = [th_live]\n",
     "        if not hasattr(th_dead, \"__iter__\"):\n",
@@ -470,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5537,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,12 +517,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5510,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tifffile import imwrite\n",
-    "imwrite('Maze_color.tif', output.T//3)"
+    "imwrite('Maze_colour.tif', output.T//3)"
    ]
   }
  ],
