--- a/notebooks/4.Preparing_Turing.ipynb
+++ b/notebooks/4.Preparing_Turing.ipynb
@@ -160,6 +160,35 @@
     "model_2 = Turing(mu_a=10, tau=1, T=10, size=200)\n",
     "print(model_2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**From now on we will use the class `TuringInit` provided in the TuringModel package installed as a parent class to initialise our classes**\n",
+    "\n",
+    "(you can find the code for the `TuringInit` class [there](../src/turing_models/TuringModels.py))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from turing_models import TuringInit\n",
+    "\n",
+    "class Turing(TuringInit):\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "    \n",
+    "model = Turing()\n",
+    "print(model)\n",
+    "\n",
+    "model = Turing(mu_a=10)\n",
+    "print(model)\n",
+    "print(f\"{model.dt, model.dx, model.tau = }\")"
+   ]
   }
  ],
  "metadata": {
