--- a/notebooks/5.Turing_no_space.ipynb
+++ b/notebooks/5.Turing_no_space.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "Once instantiated, the class should have a `run` method that runs the model until time `T` with the $\\delta t$ specified by `dt`.\n",
     "\n",
-    "Each steps of the run should be stored in an `array` named `A`."
+    "Each steps of the run should be stored in a 1 dimensional `np.ndarray` named `A`."
    ]
   },
   {
@@ -43,28 +43,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
+    "from turing_models import TuringInit\n",
     "\n",
-    "class Turing:\n",
-    "    ... # Parameters\n",
+    "class Turing(TuringInit):\n",
     "\n",
     "    def reaction(self):\n",
     "        ...\n",
     "\n",
-    "    def plot_reaction(self):\n",
-    "        if hasattr(self, \"A\"):\n",
-    "            fig, ax = plt.subplots()\n",
-    "            ax.plot(self.A)\n",
-    "            fig.tight_layout()\n",
-    "        else:\n",
-    "            print(\"Please compute `A` and store it in `self.A` before running that method\")\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        ...\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
     "\n",
     "model = Turing()\n",
     "...\n",
-    "model.plot_reaction()"
+    "model.plot_reactions()"
    ]
   },
   {
@@ -89,7 +80,7 @@
     "\n",
     "Once instantiated, the class should have a `run` method that runs the model until time `T` with the $\\delta t$ specified by `dt`.\n",
     "\n",
-    "Each steps of the run should be stored in two `ndarray`s named `A` and `I`."
+    "Each steps of the run should be stored in two 1 dimensional `ndarray`s named `A` and `I`."
    ]
   },
   {
@@ -98,26 +89,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Turing:\n",
-    "    ... # Parameters\n",
+    "class Turing(TuringInit):\n",
     "\n",
     "    def reaction(self):\n",
     "        ...\n",
     "\n",
-    "    def plot_reactions(self):\n",
-    "        if hasattr(self, \"A\") or hasattr(self, \"I\"):\n",
-    "            fig, ax = plt.subplots()\n",
-    "        else:\n",
-    "            print(\"Please compute `A` and `I` and store them in `self.A` and `self.I` before running that method\")\n",
-    "            return\n",
-    "        if hasattr(self, \"A\"):\n",
-    "            ax.plot(self.A)\n",
-    "        if hasattr(self, \"I\"):\n",
-    "            ax.plot(self.I)\n",
-    "        fig.tight_layout()\n",
-    "\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
     "        ...\n",
+    "\n",
     "\n",
     "model = Turing()\n",
     "...\n",
@@ -155,26 +135,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Turing:\n",
-    "    ... # Parameters\n",
+    "class Turing(TuringInit):\n",
     "\n",
     "    def reaction(self):\n",
     "        ...\n",
     "\n",
-    "    def plot_reactions(self):\n",
-    "        if hasattr(self, \"A\") or hasattr(self, \"I\"):\n",
-    "            fig, ax = plt.subplots()\n",
-    "        else:\n",
-    "            print(\"Please compute `A` and `I` and store them in `self.A` and `self.I` before running that method\")\n",
-    "            return\n",
-    "        if hasattr(self, \"A\"):\n",
-    "            ax.plot(self.A)\n",
-    "        if hasattr(self, \"I\"):\n",
-    "            ax.plot(self.I)\n",
-    "        fig.tight_layout()\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
     "\n",
-    "    def __init__(self):\n",
-    "        ...\n",
     "\n",
     "model = Turing()\n",
     "...\n",
