--- a/notebooks/3.GameOfLife.ipynb
+++ b/notebooks/3.GameOfLife.ipynb
@@ -524,6 +524,13 @@
     "from tifffile import imwrite\n",
     "imwrite('Maze_colour.tif', output.T//3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[To the next notebook](4.Preparing_Turing.ipynb)"
+   ]
   }
  ],
  "metadata": {
