--- a/notebooks/4.Preparing_Turing.ipynb
+++ b/notebooks/4.Preparing_Turing.ipynb
@@ -189,6 +189,13 @@
     "print(model)\n",
     "print(f\"{model.dt, model.dx, model.tau = }\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[To the next notebook](5.Turing_no_space.ipynb)"
+   ]
   }
  ],
  "metadata": {
