--- a/notebooks/5.Turing_no_space.ipynb
+++ b/notebooks/5.Turing_no_space.ipynb
@@ -148,6 +148,13 @@
     "...\n",
     "model.plot_reactions()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[To the next notebook](6.Modeling_diffusion.ipynb)"
+   ]
   }
  ],
  "metadata": {
