--- a/notebooks/0.Functions.ipynb
+++ b/notebooks/0.Functions.ipynb
@@ -454,6 +454,13 @@
     "out = combining_2(\"a\", \"b\", \"c\")\n",
     "print(out)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[To the next notebook](1.Classes.ipynb)"
+   ]
   }
  ],
  "metadata": {
@@ -472,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
